Removed use of Callback, caused crashes and instability

--- a/SnailBoardLayoutEditor/MainWindow.xaml
+++ b/SnailBoardLayoutEditor/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SnailBoardLayoutEditor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SnailBoard Layout Editor" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="138"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ListBox Margin="10"/>
+
     </Grid>
 </Window>
